# ads-tui

./: LICENSE  ReadMe.md  pyproject.toml
ads_tui/: __init__.py  actions.py  api.py  cache.py  cli.py  config.py  fzf.py  preview.py
src/ads_tui/: __init__.py  actions.py  api.py  cli.py  fzf.py  models.py
tests/: http_req.py
