[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "ads-tui"
version = "0.1.0"
description = "A terminal user interface for searching NASA ADS papers"
license = "MIT"
license-files = ["LICENSE"]
readme = "ReadMe.md"
requires-python = ">=3.11"

authors = [
    {name = "Gautam Paul"}
]

dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
    "pyperclip>=1.9",
    "pydantic>=2.7"
]


[project.scripts]
ads-tui = "ads_tui.cli:app"


[tool.setuptools.packages.find]
where = [
    "."
]


[tool.ruff]
line-length = 88
target-version = "py311"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
