[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"


[project]
name = "ads-tui"
version = "0.1.2"
description = "A terminal user interface for searching NASA ADS papers"
license = "MIT"
license-files = ["LICENSE"]
readme = "ReadMe.md"
requires-python = ">=3.11"

authors = [
    {name = "Gautam Paul"}
]

dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
    "pyperclip>=1.9",
    "pydantic>=2.7"
]
keywords = ["ads", "nasa", "tui", "cli", "papers", "astronomy", "astrophysics", "research"]
classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Researchers",
  "Topic :: Researchers :: Bibliographic Databases",

  "Programming Language :: Python :: 3.11",
]
[project.urls]
Repository = "https://github.com/Credence473/ads-tui"


[project.scripts]
ads-tui = "ads_tui.cli:app"


[tool.uv.build-backend]
module-name = "ads_tui"
module-root = "src"


[tool.ruff]
line-length = 88
target-version = "py311"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[dependency-groups]
dev = [
    "ipython>=9.15.0",
]
